--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -35,6 +35,8 @@
                     = link_to 'Sponsors', sponsors_path
                   %li{ class: active_link('/contact') }
                     = link_to 'Contact', contact_path
+                  %li{ class: active_link('/privacy') }
+                    = link_to 'Privacy', privacy_path
                 .nav.navbar-nav.navbar-right
                   - if user_signed_in?
                     %li{ class: active_link('/register') }
